fixed left align of dropdown

--- a/src/custom.css
+++ b/src/custom.css
@@ -32,7 +32,7 @@
     text-align: left!important;
     position: absolute!important;
     /* top: 0px; */
-    left: 30px;
+    left: 3rem;
   }
 }
 /* @media screen and (max-width: 768px) {
